Use Standard UTF-8 Charset to avoid an unnecessary try/catch